[fix] ダイアログとフライアウトの表示中であっても編集系のコマンドが実行できてしまう不具合を修正(一部)

--- a/MyPad/Views/Regions/MenuBarView.xaml
+++ b/MyPad/Views/Regions/MenuBarView.xaml
@@ -63,7 +63,7 @@
                     <mi:Material Kind="ContentSaveAll"/>
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Command="{Binding PrintCommand, Mode=OneTime}"
+            <MenuItem Command="{Binding PrintDirectCommand, Mode=OneTime}"
                       Header="{le:Loc Command_Print}"
                       HeaderStringFormat="{}{0}..."
                       InputGestureText="Ctrl+P">
