--- a/MyPad/Views/Styles/Base/Generic.xaml
+++ b/MyPad/Views/Styles/Base/Generic.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:m="http://metro.mahapps.com/winfx/xaml/controls">
+                    xmlns:m="http://metro.mahapps.com/winfx/xaml/controls"
+                    xmlns:md="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="./Colors.xaml"/>
@@ -60,6 +61,7 @@
     <Style TargetType="{x:Type m:WindowCommands}"        BasedOn="{StaticResource Default.WindowCommands}"/>
     <Style TargetType="{x:Type m:HamburgerMenu}"         BasedOn="{StaticResource Default.HamburgerMenu}"/>
     <Style TargetType="{x:Type m:Flyout}"                BasedOn="{StaticResource Default.Flyout}"/>
+    <Style TargetType="{x:Type md:CustomDialog}"         BasedOn="{StaticResource Default.CustomDialog}"/>
 
     <Style x:Key="{ComponentResourceKey ResourceId=MetroDataGridSelectAllButtonStyle, TypeInTargetAssembly={x:Type DataGrid}}" TargetType="{x:Type Button}">
         <Setter Property="Template" Value="{DynamicResource Default.DataGridSelectAllButtonTemplate}"/>
